<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="98dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="input 1"
        android:inputType="number|numberDecimal"
        android:textColor="#000000"
        android:textColorHint="@color/disabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="Basic Calculator"
        android:textColor="@color/grey_title"
        android:textSize="30sp"
        app:fontFamily="@font/manrope_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="input 2"
        android:inputType="number|numberDecimal"
        android:textColor="#000000"
        android:textColorHint="@color/disabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.0" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="303dp"
        android:layout_height="389dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#B0BEC5"
                android:text="@string/btn_clear" />

            <Button
                android:id="@+id/btn_backspace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:text="@string/btn_backspace" />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:text="@string/btn_divide" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:text="@string/btn_num_7" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:text="@string/btn_num_8" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:text="@string/btn_num_9" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:text="@string/btn_num_4" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:text="@string/btn_num_5" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:text="@string/btn_num_6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:includeFontPadding="false"
                android:onClick="oneButton"
                android:text="@string/btn_num_1" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:onClick="btnPress"
                android:text="@string/btn_num_2" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:text="@string/btn_num_3" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_arrow_left"
                android:layout_width="78dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:text="@string/btn_arrow_left" />

            <Button
                android:id="@+id/btn_0"
                android:layout_width="77dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:text="@string/btn_num_0" />

            <Button
                android:id="@+id/btn_decimal"
                android:layout_width="78dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:text="@string/btn_num_decimal" />

            <Button
                android:id="@+id/button3"
                android:layout_width="73dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CFD8DC"
                android:text="@string/btn_arrow_right" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="185dp"
        android:layout_weight="1"
        android:background="#546E7A"
        android:onClick="calculate"
        android:text="@string/btn_calculate"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="205dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="@+id/tableLayout">

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#607D8B"
            android:text="@string/btn_multiply" />

        <Button
            android:id="@+id/btn_subtract"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#607D8B"
            android:text="@string/btn_subtract" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#607D8B"
            android:onClick="addButton"
            android:text="@string/btn_plus" />

    </LinearLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/white"
        android:cursorVisible="true"
        android:ems="10"
        android:gravity="right|center_vertical"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="0"
        android:textAllCaps="false"
        android:textSize="48sp"
        android:typeface="normal"
        app:fontFamily="@font/manrope_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

</androidx.constraintlayout.widget.ConstraintLayout>